--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body {font-family: "Lato", sans-serif}
+body {font-family: "Lato", 'sans-serif'}
 .mySlides {display: none}
 </style>
 </head>
@@ -33,8 +33,8 @@ body {font-family: "Lato", sans-serif}
   <div class="gva-bar gva-black gva-card">
     <a class="gva-bar-item gva-button gva-padding-large gva-hide-medium gva-hide-large gva-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="gva-bar-item gva-button gva-padding-large">HOME</a>
-    <a href="#band" class="gva-bar-item gva-button gva-padding-large gva-hide-small">ABOUT US</a>
-    <a href="#tour" class="gva-bar-item gva-button gva-padding-large gva-hide-small">GV STATS</a>
+    <a href="#band" class="gva-bar-item gva-button gva-padding-large gva-hide-small">GUN STATS</a>
+    <a href="#tour" class="gva-bar-item gva-button gva-padding-large gva-hide-small">T-SHIRTS</a>
     <a href="#contact" class="gva-bar-item gva-button gva-padding-large gva-hide-small">CONTACT</a>
     <div class="gva-dropdown-hover gva-hide-small">
       <button class="gva-padding-large gva-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
@@ -50,113 +50,98 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
 <div id="navDemo" class="gva-bar-block gva-black gva-hide gva-hide-large gva-hide-medium gva-top" style="margin-top:46px">
-  <a href="#band" class="gva-bar-item gva-button gva-padding-large" onclick="myFunction()">BAND</a>
-  <a href="#tour" class="gva-bar-item gva-button gva-padding-large" onclick="myFunction()">TOUR</a>
+  <a href="#band" class="gva-bar-item gva-button gva-padding-large" onclick="myFunction()">HOME</a>
+  <a href="#tour" class="gva-bar-item gva-button gva-padding-large" onclick="myFunction()">OUR MISSION</a>
   <a href="#contact" class="gva-bar-item gva-button gva-padding-large" onclick="myFunction()">CONTACT</a>
   <a href="#" class="gva-bar-item gva-button gva-padding-large" onclick="myFunction()">MERCH</a>
 </div>
 
 <!-- Page content -->
+<div id="everything">
 <div class="gva-content" style="max-width:2000px;margin-top:46px">
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides gva-display-container gva-center">
-    <img src="/gvaimages/la.jpg" style="width:100%">
+    <img src="gunViolenceUS.png" style="width: 30%; border: 4px solid #ED9424" >
     <div class="gva-display-bottommiddle gva-container gva-text-white gva-padding-32 gva-hide-small">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>   
+      <p><b>School shootings march</b></p>   
     </div>
   </div>
   <div class="mySlides gva-display-container gva-center">
-    <img src="/gvaimages/ny.jpg" style="width:100%">
+    <img src="gunViolenceSS.png" style="width:30%; border: 4px solid #ED9424">
     <div class="gva-display-bottommiddle gva-container gva-text-white gva-padding-32 gva-hide-small">
-      <h3>New York</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
+      <p><b>Suicide leads in gun violence cases</b></p>    
     </div>
   </div>
   <div class="mySlides gva-display-container gva-center">
-    <img src="/gvaimages/chicago.jpg" style="width:100%">
+    <img src="gunViolenceSchS.png" style="width: 30%; border: 4px solid #ED9424">
     <div class="gva-display-bottommiddle gva-container gva-text-white gva-padding-32 gva-hide-small">
-      <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
+      <p><b>Gun violence in the US</b></p>    
     </div>
   </div>
 
-  <!-- The Band Section -->
-  <div class="gva-container gva-content gva-center gva-padding-64" style="max-width:800px" id="band">
-    <h2 class="gva-wide">OUR MISSION</h2>
-    <p class="gva-opacity"><i>We want reform.</i></p>
-    <p class="gva-justify">As a team, our mission is to build awareness over gun issues in three different ways. Firstly, we want to give people the access to sites where donations can be made to Gun Violence Awareness charities and advocates who can help provide change on a larger scale. Secondly, we want to provide people with centralized stats on not only gun violence specifically in their area, but all over the US as well. And lastly, we want to educate people on faulty gun laws so they can get the idea of changing gun laws to their state representative.</p>
-    <div class="gva-row gva-padding-32">
-      <div class="gva-third">
-        <p>Name</p>
-        <img src="/gvaimages/bandmember.jpg" class="gva-round gva-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="gva-third">
-        <p>Name</p>
-        <img src="/gvaimages/bandmember.jpg" class="gva-round gva-margin-bottom" alt="Random Name" style="width:60%">
-      </div>
-      <div class="gva-third">
-        <p>Name</p>
-        <img src="/gvaimages/bandmember.jpg" class="gva-round" alt="Random Name" style="width:60%">
-      </div>
-    </div>
+
+  <!-- INTRO -->
+    <img src="gunLogo.png" style="position:absolute; top:-300px; left:790px; border: 7px solid #ED9424;" >
+
+
+  <div class="gva-container gva-content gva-center gva-padding-64" style="max-width:800px" id="band" style="max-height:4000px">
+    <h2 id="gva-title" class="gva-wide">OUR MISSION</h2>
+    <p id="gva-phrase" class="gva-opacity"><i>Be The Change You Want To See</i></p>
+    <p id="gva-mission" class="gva-justify">As a team, our mission is to build awareness over gun issues in three different ways. Firstly, we want to give people the access to sites where donations can be made to Gun Violence Awareness charities and advocates who can help provide change on a larger scale. Secondly, we want to provide people with centralized stats on not only gun violence specifically in their area, but all over the US as well. And lastly, we want to educate people on faulty gun laws so they can get the idea of changing gun laws to their state representative.</p>
   </div>
 
-  <!-- The Tour Section -->
+  <!-- The T-Shirt Section -->
   <div class="gva-black" id="tour">
     <div class="gva-container gva-content gva-padding-64" style="max-width:800px">
       <h2 class="gva-wide gva-center">Gun Stats</h2>
       <p class="gva-opacity gva-center"><i>Here is all the information about Gun Violence in your area.</i></p><br>
 
       <ul class="gva-ul gva-border gva-white gva-text-grey">
-        <li class="gva-padding">Deaths from Gun Violence <span class="gva-tag gva-red gva-margin-left"></span></li>
+        <div id ="gunny">Deaths from Gun Violence </div>
         <li class="gva-padding">% of crimes to due to guns <span class="gva-tag gva-red gva-margin-left"></span></li>
         <li class="gva-padding">Gun Violence ranked by State <span class="gva-badge gva-right gva-margin-right">3</span></li>
       </ul>
 
       <div class="gva-row-padding gva-padding-32" style="margin:0 -16px">
         <div class="gva-third gva-margin-bottom">
-          <img src="/gvaimages/newyork.jpg" alt="New York" style="width:100%" class="gva-hover-opacity">
+          <img src="orange.png" alt="New York" style="width:100%" class="gva-hover-opacity">
           <div class="gva-container gva-white">
-            <p><b>New York</b></p>
-            <p class="gva-opacity">Fri 27 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="gva-button gva-black gva-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <p><b>Orange Tee</b></p>
+            <p class="gva-opacity">Wear Orange! </p>
+            <button class="gva-button gva-black gva-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Shirts</button>
           </div>
         </div>
         <div class="gva-third gva-margin-bottom">
-          <img src="/gvaimages/paris.jpg" alt="Paris" style="width:100%" class="gva-hover-opacity">
+          <img src="GVAtshirt.png" alt="Paris" style="width:100%" class="gva-hover-opacity">
           <div class="gva-container gva-white">
-            <p><b>Paris</b></p>
-            <p class="gva-opacity">Sat 28 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="gva-button gva-black gva-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <p><b> Gun Violence Awareness</b></p>
+            <p class="gva-opacity">This Is Just The Logo</p>
+            <button class="gva-button gva-black gva-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Shirts</button>
           </div>
         </div>
         <div class="gva-third gva-margin-bottom">
-          <img src="/gvaimages/sanfran.jpg" alt="San Francisco" style="width:100%" class="gva-hover-opacity">
+          <img src="textOnly.png" alt="San Francisco" style="width:100%" class="gva-hover-opacity">
           <div class="gva-container gva-white">
-            <p><b>San Francisco</b></p>
-            <p class="gva-opacity">Sun 29 Nov 2016</p>
-            <p>Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-            <button class="gva-button gva-black gva-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Tickets</button>
+            <p><b>Gun Violence Awareness</b></p>
+            <p class="gva-opacity">This Is Just The Text</p>
+            <button class="gva-button gva-black gva-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">Buy Shirts</button>
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Ticket Modal -->
+  <!-- T-SHIRT MODAL -->
   <div id="ticketModal" class="gva-modal">
     <div class="gva-modal-content gva-animate-top gva-card-4">
       <header class="gva-container gva-teal gva-center gva-padding-32"> 
         <span onclick="document.getElementById('ticketModal').style.display='none'" 
        class="gva-button gva-teal gva-xlarge gva-display-topright">×</span>
-        <h2 class="gva-wide"><i class="fa fa-suitcase gva-margin-right"></i>Tickets</h2>
+        <h2 class="gva-wide"><i class="fa fa-suitcase gva-margin-right"></i>T-Shirts</h2>
       </header>
       <div class="gva-container">
-        <p><label><i class="fa fa-shopping-cart"></i> Tickets, $15 per person</label></p>
+        <p><label><i class="fa fa-shopping-cart"></i> T-Shirts, $10 per shirt</label></p>
         <input class="gva-input gva-border" type="text" placeholder="How many?">
         <p><label><i class="fa fa-user"></i> Send To</label></p>
         <input class="gva-input gva-border" type="text" placeholder="Enter email">
@@ -167,21 +152,61 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
 
+
+  <!-- The Volunteer Section -->
+  <div id="volunteer">
+  <div class="gva-black" id="tour">
+    <div class="gva-container gva-content gva-padding-64" style="max-width:800px">
+      <h2 class="gva-wide gva-center">Volunteer!</h2>
+      <p class="gva-opacity gva-center"><i>Here are some of our partners with Gun Violence volunteer opportunities</i></p><br>
+
+
+      <div class="gva-row-padding gva-padding-32" style="margin:0 -16px">
+        <div class="gva-third gva-margin-bottom">
+          <img src="sandyHookVol.jpg" alt="Sandy Hook Promise" style="width:100%" class="gva-hover-opacity">
+          <div class="gva-container gva-white">
+            <p><b>Promise Leader Volunteer</b></p>
+            <p class="gva-opacity">Build Awareness, Advocate, and Fundraise.</p>
+            <a href="https://www.sandyhookpromise.org/take-action/volunteer/details/" target="_blank"><button class="gva-button gva-black gva-margin-bottom">Sign Up!</button></a>
+          </div>
+        </div>
+        <div class="gva-third gva-margin-bottom">
+          <img src="everyTownVol.png" alt="Every Town" style="width:100%" class="gva-hover-opacity">
+          <div class="gva-container gva-white">
+            <p><b>Take Action!</b></p>
+            <p class="gva-opacity"></p>
+            <a href="https://www.everytown" target="_blank"><button class="gva-button gva-black gva-margin-bottom">Sign Up!</button></a>        
+            </div>
+        </div>
+        <div class="gva-third gva-margin-bottom">
+          <img src="gunLogo.png" alt="Gun Violence Awareness" style="width:100%" class="gva-hover-opacity">
+          <div class="gva-container gva-white">
+            <p><b>Gun Violence Awareness</b></p>
+            <p class="gva-opacity">This Is Just The Text</p>
+            <a href="https://forms.gle/Sc562FwdVxmicMyy5" target="_blank"><button class="gva-button gva-black gva-margin-bottom">Sign Up!</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
   <!-- The Contact Section -->
+  <div id="contact">
   <div class="gva-container gva-content gva-padding-64" style="max-width:800px" id="contact">
     <h2 class="gva-wide gva-center">CONTACT</h2>
-    <p class="gva-opacity gva-center"><i>Want other ways to help? Contact Us!></p>
+    <p class="gva-opacity gva-center"><i>Want other ways to help? Contact Us!</p>
     <div class="gva-row gva-padding-32">
       <div class="gva-col m6 gva-large gva-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px"></i> Maryland, US<br>
-        <i class="fa fa-phone" style="width:30px"></i> Phone: 301-541-9360<br>
+        <i class="fa fa-phone" style="width:30px"></i> Phone: 555-273-9000<br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email: preventgv@outlook.com<br>
       </div>
       <div class="gva-col m6">
         <form action="/action_page.php" target="_blank">
           <div class="gva-row-padding" style="margin:0 -16px 8px -16px">
             <div class="gva-half">
-              <input class="gva-input gva-border" type="text" placeholder="Name" required name="Name">
+              <input class="gva-input gva-border" type="text" placeholder=Name" required name="Name">
             </div>
             <div class="gva-half">
               <input class="gva-input gva-border" type="text" placeholder="Email" required name="Email">
@@ -193,14 +218,10 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
-  
+</div>
+</div>
 <!-- End Page Content -->
 </div>
-
-<!-- Image of location/map -->
-<img src="/gvaimages/map.jpg" class="gva-image gva-greyscale-min" style="width:100%">
-
-
 
 <script>
 // Automatic Slideshow - change image every 4 seconds
